name:                Jigsaw
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Jigsaw#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           2016 Jonatan Sundqvist
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Plugins
  build-depends:       base >= 4.7 && < 5
                     , ghc == 7.10.3
                     , ghc-paths
                     , filepath
                     , containers
  default-language:    Haskell2010

executable Jigsaw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , either
                     , Jigsaw
  default-language:    Haskell2010

test-suite Jigsaw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Jigsaw
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Jigsaw
